# reverse-engineering-agent

./: .env.example  .gitignore  README.md  demo.sh  main.py  pyproject.toml
agents/: __init__.py  critic_agent.py  executor_agent.py  observations_agent.py  planner_agent.py  toolnode.py
core/: graph.py  llm.py  state.py  tui.py
example/: demo.c
prompts/: critic.py  observation.py  planner.py
tools/dynamic/: __init__.py  gdb.py  run_binary.py  websearch.py
tools/static/: __init__.py  file.py  hexdump.py  strings.py
